
	* libfreeipmi/src/ipmi-rmcpplus.c,
	libfreeipmi/src/ipmi-rmcpplus-util.c,
	libfreeipmi/src/ipmi-rmcpplus-debug.c,
	libfreeipmi/src/ipmi-rmcpplus-interface.c: Various minor cleanup.

	* libfreeipmi/src/ipmi-rmcpplus-interface.c
	(_deconstruct_payload_special, _construct_payload_special),
	libfreeipmi/src/ipmi-rmcpplus-debug.c
	(_dump_rmcpplus_payload_special): Add template checks.

		
	
2006-01-03  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-rmcpplus-util.c
	(check_rmcpplus_rakp_message_4_integrity_check_value): Fixed bug.
	
2005-12-29  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-rmcpplus-util.h,
	libfreeipmi/src/ipmi-rmcpplus-util.c
	(check_rmcpplus_rakp_message_2_key_exchange_authentication_code,
	check_rmcpplus_rakp_message_4_integrity_check_value,
	check_rmcpplus_session_trlr): Alter parameter inputs and adjust
	code appropriately.

	* libfreeipmi/src/ipmi-rmcpplus-util.c
	(check_rmcpplus_rakp_message_2_key_exchange_authentication_code,
	check_rmcpplus_rakp_message_4_integrity_value, ),
	libfreeipmi/src/ipmi-rmcpplus-interface.c
	(_deconstruct_payload_special, unassemble_ipmi_rmcpplus_pkt),
	libfreeipmi/src/ipmi-rmcpplus.c (fill_rmcpplus_rakp_message_1):
	Fix several bugs.
	
2005-12-28  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-rmcpplus.c (tmpl_rmcpplus_rakp_message_4):
	Renamed field based on IPMI 2.0 specification typo belief.

	* libfreeipmi/src/ipmi-rmcpplus-interface.c
	(_deconstruct_payload_special),
	libfreeipmi/src/ipmi-rmcpplus-debug.c
	(_dump_rmcpplus_payload_special): Rework based on typo fix belief.

	* libfreeipmi/src/ipmi-rcmpplus-debug.c
	(_dump_rmcpplus_payload_special, _dump_rmcpplus_payload,
	check_rmcpplus_rakp_message_2_key_exchange_authentication_code): Various bug fixes.

	* libfreeipmi/src/ipmi-rmcpplus-util.c
	(check_rmcpplus_payload_type, check_rmcpplus_status_code,
	check_rmcpplus_message_tag,
	check_rmcpplus_remote_console_session_id): New functions.
